yaml-examples/nefarious/nefarious-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nefarious
  namespace: default
spec:
  selector:
    app: nefarious
  ports:
  - port: 80
    targetPort: 80
